SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository, snapshots and future releases.
===============================================================================================

Enhancements:

SQL editor/SQL result tabs, SQL result tab header marks:
  New check box to configure that only the last matching SQL result tab is marked.
  See menu File --> Global Preferences --> tab SQL --> section "SQL result tab header".

SQL editor/SQL result tabs: SQuirreL now marks SQL result tab headers when the editor's current SQL
  matches the SQL result tab's SQL.
  This feature can be configured and switched of at
  menu File --> Global Preferences --> tab SQL --> section "SQL result tab header".
  The feature furthermore comes with the option to configure the width of SQL result tab headers.

Refactoring Plugin: Now supports dropping imported and exported constraints/foreign keys.
  Before this change only dropping imported constraints/foreign keys was supported.

Hibernate Plugin: HQL result tables offer a find function.

Hibernate Plugin: Improved support for projection queries:
  - The projection class's name is displayed in the projection's column header.
  - When a HQL query contains a projection, a new button on the upper left of the result tab
    allows to choose several projection display modes including JSON and XML.
  Thanks to SHD (www.shd.de) for sponsoring this feature.

Hibernate Plugin configuration: Adjusted persistence.xml description to reflect the option
  to specify jar files and/or classes directories to scan for Entities.

Hibernate Plugin: The Plugin configuration allows to copy a configuration's classpath to clipboard.

Table display now uses the background color cyan for all cells containing new lines
  not only in SQL result tables and in Object tree "Content" tables.

Table cell data popup now offers find, Xml/Json-reformatting and export functions for all tables.