@@ -18,15 +18,15 @@
  */
 package net.sourceforge.squirrel_sql.fw.dialects;
 
+import java.sql.SQLException;
+import java.util.Collection;
+import java.util.List;
+
 import net.sourceforge.squirrel_sql.fw.dialects.fromhibernate3_2_4_sp1.HibernateException;
 import net.sourceforge.squirrel_sql.fw.sql.IDatabaseObjectInfo;
 import net.sourceforge.squirrel_sql.fw.sql.ISQLDatabaseMetaData;
 import net.sourceforge.squirrel_sql.fw.sql.ITableInfo;
 import net.sourceforge.squirrel_sql.fw.sql.TableColumnInfo;
-
-import java.sql.SQLException;
-import java.util.Collection;
-import java.util.List;
 
 /**
  * An interface for methods implemented by database dialects for the purpose of
@@ -1260,4 +1260,8 @@ public interface HibernateDialect extends StringTemplateConstants {
 	 *         update or delete statement.
 	 */
 	String getBinaryLiteralString(byte[] binaryData);
+
+   boolean supportsDropConstraintCascade();
+
+	boolean supportsDropConstraintRestrict();
 }
